gc/g1/TestShrinkAuxiliaryData15.java fails with java.lang.RuntimeException: heap decommit failed - after > before

XMLWordPrintable

    • gc
    • b59
    • windows_7

         stderr: [Exception in thread "main" java.lang.RuntimeException: heap decommit failed - after > before: 9437184 > 8388608
        at com.oracle.java.testlibrary.Asserts.error(Asserts.java:450)
        at com.oracle.java.testlibrary.Asserts.assertTrue(Asserts.java:377)
        at com.oracle.java.testlibrary.Asserts.assertLessThanOrEqual(Asserts.java:124)
        at TestShrinkAuxiliaryData$ShrinkAuxiliaryDataTest.test(TestShrinkAuxiliaryData.java:206)
        at TestShrinkAuxiliaryData$ShrinkAuxiliaryDataTest.main(TestShrinkAuxiliaryData.java:156)

              Assignee:
              Andrey Zakharov (Inactive)
              Reporter:
              Igor Veresov
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: