8061715: gc/g1/TestShrinkAuxiliaryData15.java fails with java.lang.RuntimeException: heap decommit failed - after > before

Added WhiteBox methods to count regions and exact aux data sizes

Reviewed-by: tschatzl, jwilhelm, mgerdin